# exam_paper_detector

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  DIRECTORY_STRUCTURE.md  FILES_CREATED.md  MVP_ROADMAP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_ZH.md  build_all.bat  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/exam_paper_detector_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: exam_paper_detector.dart
lib/src/: api.dart  detector_service.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/models/: detection_result.dart  detector_config.dart  question_box.dart
rust/: Cargo.toml  build.rs
rust/src/: api.rs  block_detection.rs  detector.rs  frb_generated.rs  geometry.rs  layout_detector.rs  lib.rs  ocr.rs  ocr_paddle.rs  paddle_ffi.rs  preprocessing.rs  question_locator.rs  segmentation.rs  types.rs
rust_core/: Cargo.toml
rust_core/common/: Cargo.toml
rust_core/common/src/: lib.rs
windows/: CMakeLists.txt
