[package]
name = "exam_paper_detector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# flutter_rust_bridge
flutter_rust_bridge = "=2.10.0"

# 图像处理
image = "0.25"
imageproc = "0.25"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# 正则
regex = "1.10"


[build-dependencies]
flutter_rust_bridge_codegen = "2.0"

[profile.release]
lto = true
opt-level = 3
strip = true
